feat(plan)：修改 /course_product/{course_id}/plans [GET] 回傳格式
dto.PlanProduct 加入 finish_workout_count 屬性
